src/objects/GLBL_Form_Template_Answer_Option__c.object
<CustomObject>
    <description>Entity that stores the information related to &apos;Answer&apos; and its properties associated with each &apos;Question&apos; appearing on form</description>
    <fields>
        <fullName>Answer_option__c</fullName>
        <description>Stores options of an answer related to each question</description>
        <label>Answer option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Template_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>stored the id of the question to which this answer is linked to</description>
        <label>Form Template Question</label>
        <referenceTo>GLBL_Form_Template_Question__c</referenceTo>
        <relationshipLabel>Form Template Answer Option</relationshipLabel>
        <relationshipName>Form_Template_Answer_Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Helptext__c</fullName>
        <description>Stores more information to guide the front end user about the answer</description>
        <label>Helptext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score_A__c</fullName>
        <description>The assigned Force.com score for this answer option: Created by J Mohanan Pillai</description>
        <inlineHelpText>The assigned Force.com score for this answer option</inlineHelpText>
        <label>Force.com score</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_B__c</fullName>
        <description>The assigned SharePoint score for this answer option: Created by J Mohanan Pillai</description>
        <inlineHelpText>The assigned SharePoint score for this answer option</inlineHelpText>
        <label>SharePoint score</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_C__c</fullName>
        <description>The assigned LillyCloud score for this answer option: Created by J Mohanan Pillai</description>
        <inlineHelpText>The assigned LillyCloud score for this answer option</inlineHelpText>
        <label>LillyCloud score</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_D__c</fullName>
        <description>The assigned Web Hosting score for this answer option: Created by J Mohanan Pillai</description>
        <inlineHelpText>The assigned Web Hosting score for this answer option</inlineHelpText>
        <label>Web Hosting score</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_E__c</fullName>
        <description>The assigned Business Strategic / Custom score for this answer option: Created by J Mohanan Pillai</description>
        <inlineHelpText>The assigned Business Strategic / Custom score for this answer option</inlineHelpText>
        <label>Business Strategic / Custom score</label>
        <picklist>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Stores the sequence order in which options related to each answer should appear on form</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Template Answer Option</label>
    <nameField>
        <displayFormat>FTA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Template Answer Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>